--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -5,7 +5,7 @@ header{
     padding:0;
     position:absolute;
     top:0;
-    background-color:red;
+    background-color:#1E90FF;
     display:flex;
     justify-content:space-between;
     overflow:hidden;
@@ -17,12 +17,11 @@ h1{
     text-align:center;
     text-shadow:2px 2px black;
     color:white;
-    margin-left:50px;
+    margin-left:30px;
 }
 
 #artLink{
     display:flex;
-    background-color:blue;
     height:100%;
     width:10%;
     justify-self:end;
@@ -30,12 +29,16 @@ h1{
     align-items: center;
 }
 
-#artLink a{
-    color:white;
-    font-size:2em;
-    text-decoration:none;
-    text-shadow:1px 1px white;
+#logo{
+width: 60px;
+height: 60px;
+margin-right: 30px;
+transition: transform 6s;
 }
-#artLink a:hover{
-    transform:scale(110%);
+
+#logo:hover{
+    cursor:pointer;
+    transform: rotate(360deg);
+    transition: transform 6s;
+    
 }
