--- a/assets/styles/julia.css
+++ b/assets/styles/julia.css
@@ -33,7 +33,7 @@ a:hover{
 }
 
 h1 {
-  border-bottom: 1px solid darkslategray;
+  border-bottom: 1px solid #1E90FF;
   padding: 10px;
   color:white;
 }
@@ -103,4 +103,17 @@ footer {
   width: 40px;
 }
 
+#logo{
+  width: 60px;
+  height: 60px;
+  margin-right: 30px;
+  transition: transform 6s;
+  }
+  
+  #logo:hover{
+      cursor:pointer;
+      transform: rotate(360deg);
+      transition: transform 6s;
+      
+  }
 
