--- a/assets/styles/julia.css
+++ b/assets/styles/julia.css
@@ -11,8 +11,9 @@ body {
   justify-content:center;
   width: 90%;
   margin: auto;
-  background-color: black;
   overflow: hidden;
+  background-color: #1E90FF;
+
   font-size: 100%;
   font-family: sans-serif;
 }
@@ -28,29 +29,27 @@ a{
   left:2px;
   top:2px;
 }
-a:hover{
-  transform:translateX(-4px);
-}
 
 h1 {
-  border-bottom: 1px solid #1E90FF;
+  border-bottom: 1px solid #228B22;
   padding: 10px;
-  color:white;
+  color:black;
+  text-align: center;
 }
 
 footer {
-  border-top: 1px solid darkslategray;
+  border-top: 1px solid  #1E90FF;
   font-size: smaller;
   margin-top: 5px;
   clear: both;
 }
 
 .container {
-  width: 500px;
+  width: 50%;
   outline-style: solid;
   outline-width: medium;
   margin: 20px;
-  background-color: black;
+  background-color: #1E90FF;
 }
 
 .julia-canvas {
@@ -62,14 +61,20 @@ footer {
 }
 
 .button {
-  border-radius: 5px;
-  font-size: 1.1em;
-  font-weight: bold;
+background-color: transparent;
+border: none;
+width:35px;
+height: 35px;
+transform: translateY(-7px);
 }
 
+.button:hover {
+  transform: scale(120%);
+  cursor: pointer;
+}
 
 #control-panel {
-  width: 500px;
+  width: 100%;
   height: 80px;
   border-top: 1px solid darkslategray;
   background: #C0C0D0;
@@ -90,7 +95,7 @@ footer {
 }
 
 #c-input {
-  width: 130px;
+  width: 50px;
   margin: 10px;
 }
 
@@ -117,3 +122,52 @@ footer {
       
   }
 
+  #botoes{
+  margin-left: -65px;
+  margin-top: 2px;
+  }
+
+  #caixinha{
+    margin-left: -65px;
+    margin-top: -7px;
+  }
+
+  @media (max-width:1000px){
+    .container {
+      width: 90%;
+  
+    }
+  }
+@media (max-width:614px) {
+   .container{
+      width: 100%
+   }
+
+   h1 {
+    margin-left: 40px;
+  }
+}
+@media (max-width:380px){
+  .julia-canvas{
+    height: 350px;
+  }
+}
+@media (max-width:400px){
+  #radio-buttons{
+    transform: translate(-40px);
+  }
+ .container{
+  font-size: 1.2em;
+ }
+ input[name="algorithm"] {
+  width: 20px;
+  height: 20px;
+ }
+ #c-input,#contador{
+  font-size: 0.9em;
+ }
+}
+
+#inputs{
+  margin-left: 70px;
+}
